--- a/Web/CookIt.Web/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Web/CookIt.Web/Areas/Identity/Pages/Account/Register.cshtml
@@ -4,30 +4,40 @@
     ViewData["Title"] = "Register";
 }
 
-<h1>@ViewData["Title"]</h1>
+<form class="text-center border  border-danger p-5 w-50 rounded" asp-route-returnUrl="@Model.ReturnUrl" method="post">
 
-<div class="row">
-    <div class="col-md-4">
-        <form asp-route-returnUrl="@Model.ReturnUrl" method="post">
-            <h4>Create a new account.</h4>
-            <hr />
-            <div asp-validation-summary="All" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Input.Email"></label>
-                <input asp-for="Input.Email" class="form-control" />
-                <span asp-validation-for="Input.Email" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Input.Password"></label>
-                <input asp-for="Input.Password" class="form-control" />
-                <span asp-validation-for="Input.Password" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Input.ConfirmPassword"></label>
-                <input asp-for="Input.ConfirmPassword" class="form-control" />
-                <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
-            </div>
-            <button type="submit" class="btn btn-primary">Register</button>
-        </form>
+    <p class="h4 mb-4">Register</p>
+    <hr class="bg-danger"/>
+    <div asp-validation-summary="All" class="text-danger"></div>
+    <div class="form-row mb-4 my-4">
+        <div class="col">
+            <!-- First name -->
+            <input type="text" class="form-control" placeholder="First name" asp-for="Input.FirstName">
+            <span asp-validation-for="Input.FirstName" class="text-danger"></span>
+        </div>
+        <div class="col">
+            <!-- Last name -->
+            <input type="text" class="form-control" placeholder="Last name" asp-for="Input.LastName">
+            <span asp-validation-for="Input.LastName" class="text-danger"></span>
+        </div>
     </div>
-</div>
+
+    <!-- E-mail -->
+    <input type="email" class="form-control mb-4" placeholder="E-mail" asp-for="Input.Email">
+    <span asp-validation-for="Input.Email" class="text-danger"></span>
+
+    <!-- Password -->
+    <input type="password" class="form-control mb-4" placeholder="Password" aria-describedby="defaultRegisterFormPasswordHelpBlock" asp-for="Input.Password">
+    <span asp-validation-for="Input.Password" class="text-danger"></span>
+    
+    <!-- Confirm Password -->
+    <input type="password" class="form-control mb-4" placeholder="Confirm Password" aria-describedby="defaultRegisterFormConfirmPasswordHelpBlock" asp-for="Input.ConfirmPassword">
+    <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
+   
+    <hr class="bg-danger"/>
+
+    <!-- Sign up button -->
+    <button class="btn btn-danger btn-block" type="submit">Register</button>
+
+</form>
+
