--- a/Web/CookIt.Web/Views/Shared/_Layout.cshtml
+++ b/Web/CookIt.Web/Views/Shared/_Layout.cshtml
@@ -84,12 +84,12 @@
         </div>
     </header>
 
-    <div class="container ">
+    <div class="container">
         <partial name="_CookieConsentPartial" />
         <div class="d-flex justify-content-center mt-3 mb-3">
-            <div class="body-content">
+            
                 @this.RenderBody()
-            </div>
+            
         </div>
     </div>
 
@@ -126,7 +126,7 @@
                 <div class="row">
                     <div class="col-lg-4 col-md-4 col-6">
                         <aside class="f_widget f_about_widget">
-                            <img src="img/logo.png" alt="">
+                            <img src="~/img/logo.png" alt="">
                             <p>Persuit is a Premium PSD Template. Best choice for your online store. Let purchase it to enjoy now</p>
                         </aside>
                     </div>
