--- a/Web/CookIt.Web/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Web/CookIt.Web/Areas/Identity/Pages/Account/Login.cshtml
@@ -4,7 +4,7 @@
 @{
     ViewData["Title"] = "Log in";
 }
-
+<div class="d-flex justify-content-center">
     <form class="text-center border  border-danger p-5 w-50 rounded" asp-route-returnUrl="@Model.ReturnUrl" method="post">
 
         <p class="h4 mb-4">Login</p>
@@ -37,3 +37,4 @@
         <button class="btn btn-danger btn-block" type="submit">Login</button>
 
     </form>
+</div>
