--- a/Web/CookIt.Web/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/Web/CookIt.Web/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -5,8 +5,8 @@
     ViewData["ActivePage"] = ManageNavPages.Index;
 }
 
-<h4>@ViewData["Title"]</h4>
 <partial name="_StatusMessage" for="StatusMessage" />
+<h4>@ViewData["Title"]</h4>
 <div class="row">
     <div class="col-md-6">
         <form id="profile-form" method="post">
@@ -21,7 +21,6 @@
                 {
                     <div class="input-group">
                         <input asp-for="Input.Email" class="form-control" />
-                        <span class="input-group-addon" aria-hidden="true"><span class="glyphicon glyphicon-ok text-success"></span></span>
                     </div>
                 }
                 else
@@ -36,7 +35,19 @@
                 <input asp-for="Input.PhoneNumber" class="form-control" />
                 <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span>
             </div>
-            <button id="update-profile-button" type="submit" class="btn btn-primary">Save</button>
+            <div class="form-group">
+                <label asp-for="Input.FirstName"></label>
+                <input asp-for="Input.FirstName" class="form-control" />
+                <span asp-validation-for="Input.FirstName" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Input.LastName"></label>
+                <input asp-for="Input.LastName" class="form-control" />
+                <span asp-validation-for="Input.LastName" class="text-danger"></span>
+            </div>
+            <div class="d-flex justify-content-center">
+                <button id="update-profile-button" type="submit" class="btn btn-primary">Save</button>
+            </div>
         </form>
     </div>
 </div>
