--- a/Web/CookIt.Web/Areas/Identity/Pages/Account/Manage/PersonalData.cshtml
+++ b/Web/CookIt.Web/Areas/Identity/Pages/Account/Manage/PersonalData.cshtml
@@ -13,11 +13,13 @@
         <p>
             <strong>Deleting this data will permanently remove your account, and this cannot be recovered.</strong>
         </p>
-        <form id="download-data" asp-page="DownloadPersonalData" method="post" class="form-group">
-            <button class="btn btn-primary" type="submit">Download</button>
-        </form>
-        <p>
-            <a id="delete" asp-page="DeletePersonalData" class="btn btn-primary">Delete</a>
-        </p>
+        <div class="d-flex justify-content-center mt-2">
+            <form id="download-data" asp-page="DownloadPersonalData" method="post" class="form-group">
+                <button class="btn btn-primary" type="submit">Download</button>
+            </form>
+            <p>
+                <a id="delete" asp-page="DeletePersonalData" class="btn btn-primary ml-5">Delete</a>
+            </p>
+        </div>
     </div>
 </div>
