--- a/Web/CookIt.Web/Views/Shared/_Layout.cshtml
+++ b/Web/CookIt.Web/Views/Shared/_Layout.cshtml
@@ -1,4 +1,6 @@
-﻿<!DOCTYPE html>
+﻿@using CookIt.Data.Extensions
+
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -68,17 +70,27 @@
             <nav class="navbar navbar-expand-lg navbar-collapse collapse">
                 <div class="navbar-collapse collapse d-lg-inline-flex" id="navbarSupportedContent">
                     <ul class="navbar-nav">
-                        <li class="nav-item"><a class="nav-link"  asp-area="" asp-controller="Home" asp-action="Index">Blog</a></li>
-                        <li class="nav-item"><a class="nav-link"  asp-area="" asp-controller="Home" asp-action="Index">Blog</a></li>
-                        <li class="nav-item"><a class="nav-link"  asp-area="" asp-controller="Home" asp-action="Index">Blog</a></li>
-                        <li class="nav-item"><a class="nav-link"  asp-area="" asp-controller="Home" asp-action="Index">Blog</a></li>
-                        <li class="nav-item"><a class="nav-link"  asp-area="" asp-controller="Home" asp-action="Index">Blog</a></li>
-                        <li class="nav-item"><a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a></li>
+                        <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">Blog</a></li>
+                        <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">Blog</a></li>
+                        <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">Blog</a></li>
+                        <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">Blog</a></li>
+                        <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">Blog</a></li>
+                        <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a></li>
                     </ul>
-                    <ul class="navbar-nav ml-auto mr-5">
-                        <li class="nav-item"><a class="nav-link" href="/Identity/Account/Login">Login</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/Identity/Account/Register">Register</a></li>
-                    </ul>
+                    @if (this.User.Identity.IsAuthenticated)
+                    {
+                        <ul class="navbar-nav ml-auto mr-5">
+                            <partial name="_LoginPartial" />
+                        </ul>
+                    }
+                    else
+                    {
+                        <ul class="navbar-nav ml-auto mr-5">
+                            <li class="nav-item"><a class="nav-link" href="/Identity/Account/Login">Login</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/Identity/Account/Register">Register</a></li>
+                        </ul>
+                    }
+
                 </div>
             </nav>
         </div>
@@ -86,40 +98,12 @@
 
     <div class="container">
         <partial name="_CookieConsentPartial" />
-        <div class="d-flex justify-content-center mt-3 mb-3">
-            
-                @this.RenderBody()
-            
+        <div class="mt-3 mb-3">
+
+            @this.RenderBody()
+
         </div>
     </div>
-
-    <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">CookIt</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
-                    <partial name="_LoginPartial" />
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Settings" asp-action="Index">Settings</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-    </header>
-
-
     <footer class="footer_area">
         <div class="container">
             <div class="footer_widgets">
