--- a/Web/CookIt.Web/Areas/Identity/Pages/Account/Manage/Addresses.cshtml
+++ b/Web/CookIt.Web/Areas/Identity/Pages/Account/Manage/Addresses.cshtml
@@ -38,7 +38,7 @@
                         {
                             <tr>
                                 <th scope="row">@(i + 1)</th>
-                                <td>@addresses[i].Address</td>
+                                <td>@addresses[i].StreetAddress</td>
                                 <td>@addresses[i].Description</td>
                                 <td>@addresses[i].City</td>
                                 <td>@addresses[i].CityCode</td>
@@ -68,9 +68,9 @@
         <form id="address-form" method="post">
             <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Input.Address"></label>
-                <input asp-for="Input.Address" class="form-control" />
-                <span asp-validation-for="Input.Address" class="text-danger"></span>
+                <label asp-for="Input.StreetAddress"></label>
+                <input asp-for="Input.StreetAddress" class="form-control" />
+                <span asp-validation-for="Input.StreetAddress" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Input.Description"></label>
