--- a/Web/CookIt.Web/Views/Shared/_Layout.cshtml
+++ b/Web/CookIt.Web/Views/Shared/_Layout.cshtml
@@ -13,14 +13,17 @@
         <link href="~/vendors/line-icon/css/simple-line-icons.css" rel="stylesheet" asp-append-version="true" />
         <link href="~/vendors/elegant-icon/style.css" rel="stylesheet" asp-append-version="true" />
         <link href="~/css/bootstrap.min.css" rel="stylesheet" asp-append-version="true" />
+        <link href="~/css/site.css" rel="stylesheet" asp-append-version="true">
         <link href="~/css/style.css" rel="stylesheet" asp-append-version="true" />
         <link href="~/css/responsive.css" rel="stylesheet" asp-append-version="true">
+
     </environment>
     <environment names="Staging,Production">
         <link href="~/css/font-awesome.min.css" rel="stylesheet" asp-append-version="true" />
         <link href="~/vendors/line-icon/css/simple-line-icons.css" rel="stylesheet" asp-append-version="true" />
         <link href="~/vendors/elegant-icon/style.css" rel="stylesheet" asp-append-version="true" />
         <link href="~/css/bootstrap.min.css" rel="stylesheet" asp-append-version="true" />
+        <link href="~/css/site.css" rel="stylesheet" asp-append-version="true">
         <link href="~/css/style.css" rel="stylesheet" asp-append-version="true" />
         <link href="~/css/responsive.css" rel="stylesheet" asp-append-version="true">
     </environment>
@@ -40,10 +43,22 @@
                     </div>
                 </div>
                 <div class="col-lg-6">
+
                     <div class="top_header_middle">
-                        <a href="#"><i class="fa fa-phone"></i> Call Us: <span>+84 987 654 321</span></a>
-                        <a href="#"><i class="fa fa-envelope"></i> Email: <span>support@yourdomain.com</span></a>
-                        <img src="~/img/logo.png" alt="">
+                        <div class="row">
+                            <div class="col-md-12">
+                                <a href="#"><i class="fa fa-phone"></i> Call Us: <span>+84 987 654 321</span></a>
+                                <a href="#"><i class="fa fa-envelope"></i> Email: <span>support@yourdomain.com</span></a>
+                            </div>
+                            
+                        </div>
+                        <div class="row">
+
+                            <div class="col-md-12">
+                                <img src="~/img/logo.png" alt="">
+                            </div>
+                        </div>
+
                     </div>
                 </div>
                 <div class="col-lg-3">
