--- a/Web/CookIt.Web/Areas/Identity/Pages/Account/Manage/Addresses.cshtml
+++ b/Web/CookIt.Web/Areas/Identity/Pages/Account/Manage/Addresses.cshtml
@@ -59,7 +59,7 @@
         </div>
     }
 </div>
-<div class="row">
+<div class="row d-flex justify-content-center">
     <div class="col-md-6">
         <div class="d-flex justify-content-center">
             <h4>Add address</h4>
