--- a/Web/CookIt.Web/Areas/Identity/Pages/Account/Manage/ChangePassword.cshtml
+++ b/Web/CookIt.Web/Areas/Identity/Pages/Account/Manage/ChangePassword.cshtml
@@ -4,10 +4,11 @@
     ViewData["Title"] = "Change password";
     ViewData["ActivePage"] = ManageNavPages.ChangePassword;
 }
-
-<h4>@ViewData["Title"]</h4>
+    <div class="d-flex justify-content-center">
+        <h4>@ViewData["Title"]</h4>
+    </div>
 <partial name="_StatusMessage" for="StatusMessage" />
-<div class="row">
+<div class="row d-flex justify-content-center">
     <div class="col-md-6">
         <form id="change-password-form" method="post">
             <div asp-validation-summary="All" class="text-danger"></div>
@@ -26,7 +27,7 @@
                 <input asp-for="Input.ConfirmPassword" class="form-control" />
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
-            <div>
+            <div class="d-flex justify-content-center">
                 <button type="submit" class="btn btn-primary">Update password</button>
             </div>
         </form>
