--- a/Web/CookIt.Web/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/Web/CookIt.Web/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -6,8 +6,10 @@
 }
 
 <partial name="_StatusMessage" for="StatusMessage" />
-<h4>@ViewData["Title"]</h4>
-<div class="row">
+<div class="d-flex justify-content-center">
+    <h4>@ViewData["Title"]</h4>
+</div>
+<div class="row d-flex justify-content-center">
     <div class="col-md-6">
         <form id="profile-form" method="post">
             <div asp-validation-summary="All" class="text-danger"></div>
