--- a/Web/CookIt.Web/Areas/Identity/Pages/Account/Manage/PersonalData.cshtml
+++ b/Web/CookIt.Web/Areas/Identity/Pages/Account/Manage/PersonalData.cshtml
@@ -4,10 +4,10 @@
     ViewData["Title"] = "Personal Data";
     ViewData["ActivePage"] = ManageNavPages.PersonalData;
 }
-
-<h4>@ViewData["Title"]</h4>
-
-<div class="row">
+    <div class="d-flex justify-content-center">
+        <h4>@ViewData["Title"]</h4>
+    </div>
+<div class="row d-flex justify-content-center">
     <div class="col-md-6">
         <p>Your account contains personal data that you have given us. This page allows you to download or delete that data.</p>
         <p>
