--- a/Web/CookIt.Web/wwwroot/css/site.css
+++ b/Web/CookIt.Web/wwwroot/css/site.css
@@ -2,3 +2,100 @@
 for details on configuring this project to bundle and minify static web assets. */
 
 
+
+/** =======================
+ * Contenedor Principal
+ ===========================*/
+
+.accordion {
+    width: 100%;
+    max-width: 360px;
+    background: #FFF;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
+}
+
+    .accordion .link {
+        cursor: pointer;
+        display: block;
+        padding: 15px 15px 15px 42px;
+        color: #000;
+        font-size: 14px;
+        font-weight: 700;
+        border-bottom: 1px solid #CCC;
+        position: relative;
+        -webkit-transition: all 0.4s ease;
+        -o-transition: all 0.4s ease;
+        transition: all 0.4s ease;
+    }
+
+    .accordion li:last-child .link {
+        border-bottom: 0;
+    }
+
+    .accordion li i {
+        position: absolute;
+        top: 16px;
+        left: 12px;
+        font-size: 18px;
+        color: #000;
+        -webkit-transition: all 0.4s ease;
+        -o-transition: all 0.4s ease;
+        transition: all 0.4s ease;
+    }
+
+        .accordion li i.fa-chevron-down {
+            right: 12px;
+            left: auto;
+            font-size: 16px;
+        }
+
+    .accordion li.open .link {
+        color: #2783e6;
+    }
+
+    .accordion li.open i {
+        color: #2783e6;
+    }
+
+        .accordion li.open i.fa-chevron-down {
+            -webkit-transform: rotate(180deg);
+            -ms-transform: rotate(180deg);
+            -o-transform: rotate(180deg);
+            transform: rotate(180deg);
+        }
+
+    .accordion li.default .submenu {
+        display: block;
+    }
+/**
+ * Submenu
+ -----------------------------*/
+.submenu {
+    display: none;
+    background: #FFF;
+    font-size: 14px;
+}
+
+    .submenu li {
+        border-bottom: 1px solid #2783e6;
+    }
+
+    .submenu a {
+        display: block;
+        text-decoration: none;
+        color: #4D4D4D;
+        padding: 12px;
+        padding-left: 42px;
+        -webkit-transition: all 0.25s ease;
+        -o-transition: all 0.25s ease;
+        transition: all 0.25s ease;
+    }
+
+        .submenu a:hover {
+            background: #2783e6;
+            color: #FFF;
+        }
+
+
