--- a/Web/CookIt.Web/wwwroot/css/style.css
+++ b/Web/CookIt.Web/wwwroot/css/style.css
@@ -119,7 +119,7 @@ i:before {
 ============================================================================================ */
 @media (min-width: 1200px) {
   .container {
-    max-width: 1200px;
+    max-width: 1600px;
   }
 }
 
@@ -677,10 +677,12 @@ i:before {
 }
 
 .shop_header_area .navbar {
-  padding: 0px;
-  background-color: transparent !important;
-  border-top: 2px solid #eeeeee;
-  border-bottom: 2px solid #d91522;
+    padding: 0px;
+    background-color: transparent !important;
+    border-top: 2px solid #eeeeee;
+    border-bottom: 2px solid #2783e6;
+    /*#2783e6  - blue*/
+    /*#d91522 - red */
 }
 
 .shop_header_area .navbar .navbar-brand {
@@ -799,9 +801,9 @@ i:before {
   margin-right: 0px;
 }
 
-.shop_header_area .navbar .navbar-nav li:hover a, .shop_header_area .navbar .navbar-nav li.active a {
-  color: #d91522;
-}
+    .shop_header_area .navbar .navbar-nav li:hover a, .shop_header_area .navbar .navbar-nav li.active a {
+        color: #2783e6;
+    }
 
 @media (min-width: 992px) {
   .shop_header_area .navbar .navbar-nav li.submenu .dropdown-menu {
