--- a/Web/CookIt.Web/Areas/Administration/Views/_ViewImports.cshtml
+++ b/Web/CookIt.Web/Areas/Administration/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using CookIt.Web
 @using CookIt.Web.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
-@addTagHelper *, PressCenters.Web
+@addTagHelper *, CookIt.Web
+@addTagHelper *, CookIt.Web.Infrastructure
