--- a/Web/CookIt.Web/Views/Shared/_Layout.cshtml
+++ b/Web/CookIt.Web/Views/Shared/_Layout.cshtml
@@ -16,6 +16,7 @@
         <link href="~/css/site.css" rel="stylesheet" asp-append-version="true">
         <link href="~/css/style.css" rel="stylesheet" asp-append-version="true" />
         <link href="~/css/responsive.css" rel="stylesheet" asp-append-version="true">
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" >
 
     </environment>
     <environment names="Staging,Production">
@@ -26,6 +27,7 @@
         <link href="~/css/site.css" rel="stylesheet" asp-append-version="true">
         <link href="~/css/style.css" rel="stylesheet" asp-append-version="true" />
         <link href="~/css/responsive.css" rel="stylesheet" asp-append-version="true">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </environment>
 </head>
 <body>
