--- a/Web/CookIt.Web/Views/_ViewImports.cshtml
+++ b/Web/CookIt.Web/Views/_ViewImports.cshtml
@@ -2,3 +2,4 @@
 @using CookIt.Web.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, CookIt.Web
+@addTagHelper *, CookIt.Web.Infrastructure
