--- a/Web/CookIt.Web/Areas/Administration/Views/Shared/_Layout.cshtml
+++ b/Web/CookIt.Web/Areas/Administration/Views/Shared/_Layout.cshtml
@@ -1,29 +1,28 @@
 ﻿@{ 
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
+    
 <div class="row">
     <div class="col-md-3 d-flex">
         <ul id="accordion" class="accordion">
-            <li class="default open" >
+            <li>
                 <div class="link"><i class="fa fa-user"></i>Users<i class="fa fa-chevron-down"></i></div>
                 <ul class="submenu">
-                    <li><a href="/Administration/Users/Admins">Admins</a></li>
-                    <li><a href="/Administration/Users/Couriers">Couriers</a></li>
-                    <li><a href="#">CSS</a></li>
-                    <li><a href="#">Maquetacion web</a></li>
+                    <li><a id="link-a" href="/Administration/Users/Admins">Admins</a></li>
+                    <li><a id="link-a" href="/Administration/Users/Couriers">Couriers</a></li>
                 </ul>
             </li>
             <li>
-                <div class="link"><i class="fa fa-code"></i>Desarrollo front-end<i class="fa fa-chevron-down"></i></div>
+                <div class="link"><i class="fa fa-leaf"></i>Ingredients<i class="fa fa-chevron-down"></i></div>
                 <ul class="submenu">
-                    <li><a href="#">Javascript</a></li>
-                    <li><a href="#">jQuery</a></li>
-                    <li><a href="#">Frameworks javascript</a></li>
+                    <li><a id="link-a" href="/Administration/Ingredients/AllIngredientTypes">All Ingredient Types</a></li>
+                    <li><a id="link-a" href="/Administration/Ingredients/CreateIngredientType">Create Ingredient Type</a></li>
+                    <li><a id="link-a"  href="/Administration/Ingredients/AllIngredients">All Ingredients</a></li>
+                    <li><a id="link-a" href="/Administration/Ingredients/CreateIngredient">Create Ingredient</a></li>
                 </ul>
             </li>
             <li>
-                <div class="link"><i class="fa fa-mobile"></i>Diseño responsive<i class="fa fa-chevron-down"></i></div>
+                <div class="link"><i class="fa fa-id-card"></i>Diseño responsive<i class="fa fa-chevron-down"></i></div>
                 <ul class="submenu">
                     <li><a href="#">Tablets</a></li>
                     <li><a href="#">Dispositivos mobiles</a></li>
@@ -32,7 +31,7 @@
                 </ul>
             </li>
             <li>
-                <div class="link"><i class="fa fa-globe"></i>Posicionamiento web<i class="fa fa-chevron-down"></i></div>
+                <div class="link"><i class="fa fa-shopping-cart"></i>Posicionamiento web<i class="fa fa-chevron-down"></i></div>
                 <ul class="submenu">
                     <li><a href="#">Google</a></li>
                     <li><a href="#">Bing</a></li>
