Implemented initial functionality for RecipesController.cs.

--- a/Web/CookIt.Web/Areas/Administration/Views/Ingredients/AllIngredients.cshtml
+++ b/Web/CookIt.Web/Areas/Administration/Views/Ingredients/AllIngredients.cshtml
@@ -1,6 +1,6 @@
 ﻿@model List<CookIt.Web.ViewModels.Ingridient.AllIngredientViewModel>
 @{
-    this.ViewData["Title"] = "All Ingredient Types";
+    this.ViewData["Title"] = "All Ingredients";
 }
 
 <h4 class="d-flex justify-content-center">All Ingredients:</h4>
