--- a/Web/CookIt.Web/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Web/CookIt.Web/Areas/Identity/Pages/Account/Login.cshtml
@@ -5,7 +5,7 @@
     ViewData["Title"] = "Log in";
 }
 <div class="d-flex justify-content-center">
-    <form class="text-center border  border-info p-5 w-auto rounded" asp-route-returnUrl="@Model.ReturnUrl" method="post">
+    <form class="text-center border  border-info p-5 w-25 rounded" asp-route-returnUrl="@Model.ReturnUrl" method="post">
 
         <p class="h4 mb-4">Login</p>
         <hr class="bg-info" />
