--- a/Web/CookIt.Web/Areas/Administration/Views/Recipes/CreateRecipe.cshtml
+++ b/Web/CookIt.Web/Areas/Administration/Views/Recipes/CreateRecipe.cshtml
@@ -10,21 +10,24 @@
         <p class="h4 mb-4">Create Recipe</p>
         <div asp-validation-summary="All" class="text-danger pb-1"></div>
         <hr class="bg-info" />
-
+        <div class="row ml-0">
+            <span asp-validation-for="InputModel.Name" class="text-danger w-50"></span>
+            <span asp-validation-for="InputModel.Portions" class="text-danger w-25 col align-self-end mr-3 ml-4"></span>
+        </div>
         <div class="row ml-0">
             <input type="text" class="form-control mb-4 w-50" placeholder="Name" asp-for="InputModel.Name">
-            <span asp-validation-for="InputModel.Name" class="text-danger"></span>
-
             <input class="form-control mb-4 w-25 col align-self-end mr-3 ml-4" placeholder="Portions" asp-for="InputModel.Portions">
-            <span asp-validation-for="InputModel.Portions" class="text-danger"></span>
-
         </div>
 
+        <div class="row ml-0 d-flex justify-content-center">
+            <span asp-validation-for="InputModel.Description" class="text-danger"></span>
+        </div>
         <input type="text" class="form-control mb-4" placeholder="Description" asp-for="InputModel.Description">
-        <span asp-validation-for="InputModel.Description" class="text-danger"></span>
 
+        <div class="row ml-0 d-flex justify-content-center">
+            <span asp-validation-for="InputModel.RecipeInstructions" class="text-danger"></span>
+        </div>
         <textarea class="form-control mb-4" placeholder="Recipe instructions..." asp-for="InputModel.RecipeInstructions"></textarea>
-        <span asp-validation-for="InputModel.RecipeInstructions" class="text-danger"></span>
 
         <div class="text-md-left ml-1">
             <label asp-for="InputModel.Image" class="text-primary h5">Picture</label>
