--- a/Web/CookIt.Web/Views/Shared/_Layout.cshtml
+++ b/Web/CookIt.Web/Views/Shared/_Layout.cshtml
@@ -49,8 +49,8 @@
                     <div class="top_header_middle">
                         <div class="row">
                             <div class="col-md-12">
-                                <a href="#"><i class="fa fa-phone"></i> Call Us: <span>+84 987 654 321</span></a>
-                                <a href="#"><i class="fa fa-envelope"></i> Email: <span>support@yourdomain.com</span></a>
+                                <a href="#"><i class="fa fa-phone"></i> Call Us: <span>+359 987 654 321</span></a>
+                                <a href="#"><i class="fa fa-envelope"></i> Email: <span>CookIt@abv.bg</span></a>
                             </div>
                             
                         </div>
@@ -72,9 +72,9 @@
                             <li><a href="#"><i class="fa fa-instagram"></i></a></li>
                             <li><a href="#"><i class="fa fa-youtube-play"></i></a></li>
                         </ul>
-                        <ul class="top_right">
-                            <li class="user"><a href="#"><i class="icon-user icons"></i></a></li>
-                            <li class="cart"><a href="#"><i class="icon-handbag icons"></i></a></li>
+                        <ul class="top_right d-flex justify-content-center">
+                            <li class="user"><a href="/Identity/Account/Manage"><i class="icon-user icons"><i class="profileIcon">Profile</i></i></a></li>
+                            <li class="cart ml-4"><a href="#"><i class="icon_cart_alt icons pr-1"></i></a></li>
                         </ul>
                     </div>
                 </div>
