--- a/Web/CookIt.Web/Areas/Administration/Views/Recipes/Edit.cshtml
+++ b/Web/CookIt.Web/Areas/Administration/Views/Recipes/Edit.cshtml
@@ -36,10 +36,10 @@
             <span asp-validation-for="InputModel.Price" class="text-danger w-50 col align-self-end mr-3 ml-4"></span>
         </div>
         <div class="row ml-0">
-            
-                <img id="pictureId" src="@Model.InputModel.Image" alt="Not Found" width="75" height="75" />
-                <input asp-for="InputModel.Image" hidden />
-            
+
+            <img id="pictureId" src="@Model.InputModel.Image" alt="Not Found" width="75" height="75" />
+            <input asp-for="InputModel.Image" hidden />
+
             <input id="imageInputField" type="file" class="form-control-file w-25 mt-2 mb-4 border rounded" placeholder="Image..." asp-for="InputModel.ImageUpload">
             <div class="input-group w-50 col align-self-end mr-3 ml-4 mb-4">
                 <span class="input-group-addon"><i class="fa fa-euro mt-1"></i></span>
@@ -60,28 +60,33 @@
 
             @for (int i = 0; i < numberOfIgredients; i++)
             {
-                <span id="validationIngredientsSelect" asp-validation-for="InputModel.Ingredients[i].IngredientId" class="text-danger"></span>
-                <span id="validationIngredientsCount" asp-validation-for="InputModel.Ingredients[i].Count" class="text-danger"></span>
-                <span id="validationIngredientsWeight" asp-validation-for="InputModel.Ingredients[i].Weight" class="text-danger"></span>
                 <div id="ingredientRow" class="row ml-0">
-                    <select id="ingredientsSelect" type="text" class="form-control w-25 col align-self-start" asp-for="InputModel.Ingredients[i].IngredientId">
-                        <option selected disabled value="0">--- Select Ingredient Type ---</option>
-                        @for (int j = 0; j < Model.Ingredients.Count; j++)
-                        {
-                            <option value="@Model.Ingredients[j].Id">@Model.Ingredients[j].Name</option>
+                    
+                    @*<div class="container-fluid">
+                        <div class="row ml-0 justify-content-center">
+                            <span id="validationIngredientsSelect" asp-validation-for="InputModel.Ingredients[i].IngredientId" class="text-danger"></span>
+                             <span id="validationIngredientsCount" asp-validation-for="InputModel.Ingredients[i].Count" class="text-danger"></span>
+                            <span id="validationIngredientsWeight" asp-validation-for="InputModel.Ingredients[i].Weight" class="text-danger"></span>
+                        </div>
+                    </div>*@
+                    
+                        <select id="ingredientsSelect" type="text" class="form-control w-25 col align-self-start" asp-for="InputModel.Ingredients[i].IngredientId">
+                            <option selected disabled value="0">--- Select Ingredient Type ---</option>
+                            @for (int j = 0; j < Model.Ingredients.Count; j++)
+                            {
+                                <option value="@Model.Ingredients[j].Id">@Model.Ingredients[j].Name</option>
+                            }
+                        </select>
+
+                        @{
+                            string ingredientsCountId = $"ingredientsCount{i}";
+                            <input id="@ingredientsCountId" class="form-control mb-4 w-25 col align-self-center ml-4" placeholder="Count" asp-for="InputModel.Ingredients[i].Count">
+                            
+
+                            string ingredientsWeightId = $"ingredientsWeight{i}";
+                            <input id="@ingredientsWeightId" type="number" class="form-control mb-4 w-25 col align-self-end ml-4 mr-3" placeholder="Weight (grams)" asp-for="InputModel.Ingredients[i].Weight">
                         }
-                    </select>
-                    @*<span id="validationIngredientsSelect" asp-validation-for="InputModel.Ingredients[i].IngredientId" class="text-danger"></span>*@
-                    @{
-                        string ingredientsCountId = $"ingredientsCount{i}";
-                        <input id="@ingredientsCountId" class="form-control mb-4 w-25 col align-self-center ml-4" placeholder="Count" asp-for="InputModel.Ingredients[i].Count">
-                        @*<span id="validationIngredientsCount" asp-validation-for="InputModel.Ingredients[i].Count" class="text-danger"></span>*@
 
-
-                        string ingredientsWeightId = $"ingredientsWeight{i}";
-                        <input id="@ingredientsWeightId" type="number" class="form-control mb-4 w-25 col align-self-end ml-4 mr-3" placeholder="Weight (grams)" asp-for="InputModel.Ingredients[i].Weight">
-                    }
-                    @*<span id="validationIngredientsWeight" asp-validation-for="InputModel.Ingredients[i].Weight" class="text-danger"></span>*@
 
                 </div>
             }
