--- a/Web/CookIt.Web/Views/Home/Privacy.cshtml
+++ b/Web/CookIt.Web/Views/Home/Privacy.cshtml
@@ -4,3 +4,56 @@
 <h1>@this.ViewData["Title"]</h1>
 
 <p>Use this page to detail your site's privacy policy.</p>
+
+<div class="card" style="background: #eee">
+    <div class="container-fliud">
+        <div class="wrapper row">
+            <div class="preview col-md-6">
+
+                <div class="preview-pic tab-content">
+                    <div class="tab-pane active" id="pic-1"><img src="http://img.haskovo.net/uploads/recipes/2015/04/02/13604.jpg" /></div>
+                </div>
+            </div>
+            <div class="details col-md-6">
+                <h3 class="product-title">men's shoes fashion</h3>
+                <div class="rating">
+                    <div class="stars">
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star"></span>
+                        <span class="fa fa-star"></span>
+                    </div>
+                    <span class="review-no">41 reviews</span>
+                </div>
+                <p class="product-description">Suspendisse quos? Tempus cras iure temporibus? Eu laudantium cubilia sem sem! Repudiandae et! Massa senectus enim minim sociosqu delectus posuere.</p>
+                <h4 class="price">price: <span>$180</span></h4>
+                <p class="vote"><strong>91%</strong> of buyers enjoyed this product! <strong>(87 votes)</strong></p>
+                <div class="row mb-3">
+                    <div class="col-md-6">
+                        <ul class="list-group d-flex flex-row flex-wrap w-100">
+                            <li class="list-group-item active bg-success border border-success w-100">Required Ingredietes:</li>
+                            <li class="list-group-item w-50 d-flex justify-content-center">Beef</li>
+                            <li class="list-group-item w-50 d-flex justify-content-center">0.250 / kg</li>
+                            <li class="list-group-item w-50 d-flex justify-content-center">Carrots</li>
+                            <li class="list-group-item w-50 d-flex justify-content-center">2</li>
+                            <li class="list-group-item w-50 d-flex justify-content-center">Garlic</li>
+                            <li class="list-group-item w-50 d-flex justify-content-center">2</li>
+                        </ul>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="action d-flex justify-content-center">
+                            <a href="#" class="btn btn-danger btn-block mr-4">Buy <i class="fa fa-credit-card"></i></a>
+
+                        </div>
+
+                        <div class="action d-flex justify-content-center mt-2">
+                            <a href="#" class="btn btn-primary btn-block mr-4">Add to Cart <i class="fa fa-shopping-cart"></i></a>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
