Added functionality for adding review in the Details.cshtml. Added ReviewService.cs.

--- a/Web/CookIt.Web/Views/Home/Index.cshtml
+++ b/Web/CookIt.Web/Views/Home/Index.cshtml
@@ -15,7 +15,7 @@
                                 <img class="card-img-top" src="@recipe.Image" alt="Not Found" height="150">
                             </a>
                             <div class="card-body">
-                                <h5 class="card-title">@recipe.Name</h5>
+                                <a href="/Recipes/Details/@recipe.Id" class="card-title h5">@recipe.Name</a>
                                 <p class="card-text">@recipe.Description</p>
                             </div>
                             <ul class="list-group list-group-flush">
