--- a/Web/CookIt.Web/Views/Recipes/Details.cshtml
+++ b/Web/CookIt.Web/Views/Recipes/Details.cshtml
@@ -32,19 +32,12 @@
                     <div class="col-md-6">
                         <ul class="list-group d-flex flex-row flex-wrap w-100">
                             <li class="list-group-item active bg-success border border-success w-100 d-flex justify-content-start"><div class="w-50">Required Ingredients:</div> <div class="w-50 pl-4">Amount / Weight</div></li>
-                            @*<li class="list-group-item active bg-success border border-success w-50">Amount / Weight</li>*@
 
                             @foreach (var ingredient in Model.Ingreients)
                             {
                                 <li class="list-group-item w-50 d-flex justify-content-center">@ingredient.Name</li>
                                 <li class="list-group-item w-50 d-flex justify-content-center">@ingredient.Amount</li>
                             }
-                            @*<li class="list-group-item w-50 d-flex justify-content-center">Beef</li>
-                                <li class="list-group-item w-50 d-flex justify-content-center">0.250 / kg</li>
-                                <li class="list-group-item w-50 d-flex justify-content-center">Carrots</li>
-                                <li class="list-group-item w-50 d-flex justify-content-center">2</li>
-                                <li class="list-group-item w-50 d-flex justify-content-center">Garlic</li>
-                                <li class="list-group-item w-50 d-flex justify-content-center">2</li>*@
                         </ul>
                     </div>
                     <div class="col-md-6">
@@ -61,6 +54,37 @@
                 </div>
             </div>
         </div>
+        @if (!Model.HasReviewed)
+        {
+        <div class="wrapper row">
+            <div class="preview col-md-6">
+                <h3 class="d-flex justify-content-center">Reviews</h3>
+                <form asp-action="AddReview" method="post" class="text-center w-100 rounded">
+                    <div asp-validation-summary="All" class="text-danger pb-1"></div>
+                    <div class="stars d-flex justify-content-start ml-2">
+                        <div class="star-rating">
+                            <span class="fa fa-star fa-2x reviewStar" data-rating="1"></span>
+                            <span class="fa fa-star fa-2x reviewStar" data-rating="2"></span>
+                            <span class="fa fa-star fa-2x reviewStar" data-rating="3"></span>
+                            <span class="fa fa-star fa-2x reviewStar" data-rating="4"></span>
+                            <span class="fa fa-star fa-2x reviewStar" data-rating="5"></span>
+                            <input id="starsValue" asp-for="ReviewBindingModel.Stars" class="rating-value" hidden/>
+                            <span asp-validation-for="ReviewBindingModel.Stars"></span>
+                        </div>
+                    </div>
+
+                    <textarea asp-for="ReviewBindingModel.Content" class="form-control ml-1 w-100 mt-2" placeholder="Content"></textarea>
+                    <span asp-validation-for="ReviewBindingModel.Content"></span>
+                    
+                    <input  name="id" value="@Model.Id" hidden/>
+
+                    <div class="d-flex justify-content-end">
+                        <button type="submit" class="btn btn-dark mr-4 mt-4 mb-3">Add Review</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+        }
     </div>
 </div>
 
